Implemented the profile page and a command to update info.

--- a/src/java/com/bionic/freelanceit/manager/config.properties
+++ b/src/java/com/bionic/freelanceit/manager/config.properties
@@ -4,4 +4,5 @@ MAIN = /jsp/main.jspx
 ERROR = /jsp/error.jspx
 LOGIN = /jsp/login.jsp
 PROFILE = /jsp/profile.jspx
+CHANGE_PROFILE = /jsp/profile-upd.jspx
 DATASOURCE = source
