--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.Bionic.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.jstl11.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
