Added sql-scripts. Implemented (?) command to create new task.

--- a/src/java/com/bionic/freelanceit/manager/config.properties
+++ b/src/java/com/bionic/freelanceit/manager/config.properties
@@ -5,4 +5,5 @@ ERROR = /jsp/error.jspx
 LOGIN = /jsp/login.jsp
 PROFILE = /jsp/profile.jspx
 CHANGE_PROFILE = /jsp/profile-upd.jspx
+CREATE_TASK = /jsp/create-task.jspx
 DATASOURCE = source
