Partly migration to JPA

--- a/src/java/com/bionic/freelanceit/manager/config.properties
+++ b/src/java/com/bionic/freelanceit/manager/config.properties
@@ -6,4 +6,5 @@ LOGIN = /jsp/login.jsp
 PROFILE = /jsp/profile.jspx
 CHANGE_PROFILE = /jsp/profile-upd.jspx
 CREATE_TASK = /jsp/create-task.jspx
+VIEW_MY_TASKS = /jsp/view-my-tasks.jspx
 DATASOURCE = source
