--- a/FreelanceIt-war/src/java/com/bionic/freelanceit/manager/config.properties
+++ b/FreelanceIt-war/src/java/com/bionic/freelanceit/manager/config.properties
@@ -1,10 +1,10 @@
 DRIVER = com.mysql.jdbc.Driver
 URL = jdbc:mysql://localhost:3306/projectX?user=root&password=root
-MAIN = /jsp/main.jspx
+MAIN = /main.xhtml
 ERROR = /jsp/error.jspx
 LOGIN = /jsp/login.jsp
 PROFILE = /profile.xhtml
-CHANGE_PROFILE = /jsp/profile-upd.jspx
-CREATE_TASK = /jsp/create-task.jspx
-VIEW_TASKS_CREATED_BY_USER = /jsp/view-tasks-created-by-user.jspx
+CHANGE_PROFILE = /profile-upd.xhtml
+CREATE_TASK = /create-task.xhtml
+TASKS_CREATED_BY_USER = /tasks-created-by-user.xhtml
 DATASOURCE = source
