--- a/FreelanceIt-war/web/WEB-INF/web.xml
+++ b/FreelanceIt-war/web/WEB-INF/web.xml
@@ -32,11 +32,10 @@
         </auth-constraint>
     </security-constraint>
     <security-constraint>
-        <display-name>Constraint2</display-name>
+        <display-name>Open content</display-name>
         <web-resource-collection>
-            <web-resource-name>Faces constraint</web-resource-name>
-            <description/>
-            <url-pattern>/javax.faces.resource/</url-pattern>
+            <web-resource-name>Open Content</web-resource-name>
+            <url-pattern>/javax.faces.resource/*</url-pattern>
         </web-resource-collection>
     </security-constraint>
     <login-config>
@@ -76,5 +75,9 @@
     <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>delta</param-value>
+    </context-param>
+    <context-param>
+        <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+        <param-value>true</param-value>
     </context-param>
 </web-app>
