Implemented some new functions. Little changes in code

--- a/FreelanceIt-war/src/java/com/bionic/freelanceit/manager/config.properties
+++ b/FreelanceIt-war/src/java/com/bionic/freelanceit/manager/config.properties
@@ -1,10 +1,8 @@
-DRIVER = com.mysql.jdbc.Driver
-URL = jdbc:mysql://localhost:3306/projectX?user=root&password=root
 MAIN = /main.xhtml
 ERROR = /jsp/error.jspx
-LOGIN = /jsp/login.jsp
+LOGIN = /login/login.xhtml
 PROFILE = /profile.xhtml
 CHANGE_PROFILE = /profile-upd.xhtml
 CREATE_TASK = /create-task.xhtml
-TASKS_CREATED_BY_USER = /tasks-created-by-user.xhtml
-DATASOURCE = source
+TASKS_CREATED_BY_ME= /tasks-created-by-me.xhtml
+INDEX = /index.xhtml
